--- a/index.html
+++ b/index.html
@@ -3,12 +3,61 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="course assignment portal">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wdd230</title>
+    <meta name="author" content="Conor Kekauoha">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/base.css">
+    <title>WDD 230 - Web Frontend Development</title>
 </head>
 
 <body>
+    <header>
+        <img src="images/profile_pic.jpeg" alt="profile picture of Conor" width="50">
+        <h1>Conor Kekauoha</h1>
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
+        <a href="chamber/">Chamber</a>
+        <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
+        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/moro/7?lang=eng&id=p11-p13#p11"
+            target="_blank">Scripture</a>
+    </nav>
+    <main>
+        <h2>WDD 230: Web Frontend Development</h2>
+        <section class="card">
+            <h3>Learning Activities</h3>
+            <ul>
+                <li>
+                    <a href="">Activity 1</a>
+                </li>
+                <li>
+                    <a href="">Activity 2</a>
+                </li>
+                <li>
+                    <a href="">Activity 3</a>
+                </li>
+            </ul>
+        </section>
 
+        <section class="card">
+            <h3>Information</h3>
+            <p>Weather is:</p>
+            <p>Number of visits to page:</p>
+        </section>
+    </main>
+    <footer>
+        <p>
+            © <span id="year">year</span> Conor Kekauoha | California 🇺🇸
+        </p>
+        <p id="lastModified"></p>
+    </footer>
+    <script src="scripts/getdates.js"></script>
 </body>
 
 </html>
