--- a/index.html
+++ b/index.html
@@ -30,17 +30,39 @@
     </nav>
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
+        <hr>
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
                 <li>
-                    <a href="">Activity 1</a>
+                    01: <a href="">Activity 1</a>
                 </li>
                 <li>
-                    <a href="">Activity 2</a>
+                    02: <a href=""></a>
                 </li>
                 <li>
-                    <a href="">Activity 3</a>
+                    03: <a href=""></a>
+                </li>
+                <li>
+                    04: <a href=""></a>
+                </li>
+                <li>
+                    05: <a href=""></a>
+                </li>
+                <li>
+                    06: <a href=""></a>
+                </li>
+                <li>
+                    07: <a href=""></a>
+                </li>
+                <li>
+                    08: <a href=""></a>
+                </li>
+                <li>
+                    09: <a href=""></a>
+                </li>
+                <li>
+                    10: <a href=""></a>
                 </li>
             </ul>
         </section>
