--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
+    <meta name="description"
+        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,7 @@
 
 <body>
     <header>
-        <img src="images/profile_pic.jpeg" alt="profile picture of Conor" width="50">
+        <img src="images/profile_pic.jpeg" alt="profile picture of Conor">
         <h1>Conor Kekauoha</h1>
     </header>
     <nav>
