--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
+    <meta property="og:title" content="Conor Kekauoha's website for WDD-230">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
+    <meta property="og:url" content="https://conorkek.github.io/wdd230/">
     <link rel="icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
