Add css and html for lesson 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's website for WDD-230">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
+    <meta property="og:image"
+        content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
     <meta property="og:url" content="https://conorkek.github.io/wdd230/">
     <link rel="icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +20,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <title>Conor Kekauoha - WDD 230 - Web Frontend Development</title>
 </head>
 
