--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             target="_blank">Scripture</a>
     </nav>
     <main>
-        <h2>WDD 230: Web Frontend Development</h2>
-        <hr>
+        <div>
+            <h2>WDD 230: Web Frontend Development</h2>
+            <hr>
+        </div>
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
