--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Conor Kekauoha">
+    <meta property="og:title" content="Conor Kekauoha's Design Principles website">
+    <meta name="description"
+        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
     <link rel="icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
