change image format

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -27,7 +27,7 @@
             <h3>Visual Hierarchy</h3>
             <p>San Diego Zoo</p>
             <a href="https://sandiegozoowildlifealliance.org/">Sandiegozoowildlifealliance.org</a>
-            <img src="images/visual-hierarchy.PNG"
+            <img src="images/visual-hierarchy.webp"
                 alt="a mobile screenshot of the San Diego Zoo Wildlife Alliance website">
             <p>Visual hiererchy is: the arrangement or organization of elements within a design in a way that guides the
                 viewer's eye through the content in a specific order of importance. In the screenshot provided, the
@@ -38,7 +38,7 @@
             <h3>Contrast</h3>
             <p>Github</p>
             <a href="https://github.com/">Github.com</a>
-            <img src="images/contrast.PNG" alt="a mobile screenshot of the Github website">
+            <img src="images/contrast.webp" alt="a mobile screenshot of the Github website">
             <p>Contrast is a design principle that involves using different visual elements to create a noticeable
                 difference between them. In the screenshot provided, we see a black background with very bright colors
                 contrast each very well.</p>
@@ -48,7 +48,7 @@
             <h3>White Space and Clean Design</h3>
             <p>Company name</p>
             <a href="https://www.walmart.com/">Walmart.com</a>
-            <img src="images/white-space.PNG" alt="a mobile screenshot of the Walmart website">
+            <img src="images/white-space.webp" alt="a mobile screenshot of the Walmart website">
             <p>White space, also known as negative space, is the empty space between design elements on a page or
                 screen. Clean design is a design style that is simple, uncluttered, and easy to understand. In the
                 screenshot, provided Walmart employs white space around each of the cards, and it is a very simple and
