add link to design-principles html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     01: <a href="">Activity 1</a>
                 </li>
                 <li>
-                    02: <a href=""></a>
+                    02: <a href="lesson02/design-principles.html">Lesson 02 | Design Principles</a>
                 </li>
                 <li>
                     03: <a href=""></a>
