--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     02: <a href="lesson02/design-principles.html">Lesson 02 | Design Principles</a>
                 </li>
                 <li>
-                    03: <a href=""></a>
+                    03: <a href="lesson03/images/w3schools-exercise.png">Screenshot of w3schools.com combinator exercise</a>
                 </li>
                 <li>
                     04: <a href=""></a>
