--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                         exercise</a>
                 </li>
                 <li>
-                    04: <a href="https://codepen.io/conorkek/pen/mdNeYgW">Link to CodePen activity</a>
+                    04: <a href="https://codepen.io/conorkek/pen/mdNeYgW">Link to CodePen CSS Psuedo Elements Activity</a>
                 </li>
                 <li>
-                    05: <a href=""></a>
+                    05: <a href="https://codepen.io/conorkek/pen/YzmwaMY">Link to CodePen Hamburger Activity</a>
                 </li>
                 <li>
                     06: <a href=""></a>
