add css and html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <img src="images/profile_pic.jpeg" alt="profile picture of Conor">
         <h1>Conor Kekauoha</h1>
     </header>
-    <nav>
+    <button id="menu" class></button>
+    <nav class="navigation">
         <a href="#">Home</a>
         <a href="lesson03/chamber-site-plan.html">Site Plan</a>
         <a href="chamber/">Chamber</a>
@@ -56,7 +57,8 @@
                         exercise</a>
                 </li>
                 <li>
-                    04: <a href="https://codepen.io/conorkek/pen/mdNeYgW">Link to CodePen CSS Psuedo Elements Activity</a>
+                    04: <a href="https://codepen.io/conorkek/pen/mdNeYgW">Link to CodePen CSS Psuedo Elements
+                        Activity</a>
                 </li>
                 <li>
                     05: <a href="https://codepen.io/conorkek/pen/YzmwaMY">Link to CodePen Hamburger Activity</a>
@@ -84,6 +86,9 @@
             <p>Weather is:</p>
             <p>Number of visits to page:</p>
         </section>
+        <iframe class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26496.05005913012!2d-118.42174214482833!3d33.889492685963795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b3c5e2b0632f%3A0x70351d4f4154520!2sManhattan%20Beach%2C%20CA%2090266!5e0!3m2!1sen!2sus!4v1727924375615!5m2!1sen!2sus"
+            allowfullscreen="" frameBorder="0" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>
@@ -92,6 +97,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/hamburger-menu.js"></script>
 </body>
 
 </html>
