--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -3,7 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Conor Kekauoha">
+    <meta property="og:title" content="Conor Kekauoha's Chamber Site Plan website for WDD-230">
+    <meta property="og:type" content="website">
+    <meta property="og:image"
+        content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
+    <meta property="og:url" content="https://conorkek.github.io/wdd230/">
     <title>Manhattan Beach Chamber of Commerce Site Plan</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
