--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="description"
         content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
