--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
+        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for the chamber site plan">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's Chamber Site Plan website for WDD-230">
