--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -15,42 +15,36 @@
     <title>Manhattan Beach Chamber of Commerce Site Plan</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
-
 <body>
     <header>
         <h1>Manhattan Beach Chamber of Commerce Site Plan</h1>
     </header>
-
     <main>
-        <!-- Site Name Section -->
         <section>
             <h2>Site Name</h2>
-            <p>The site will be named "Manhattan Beach Chamber of Commerce." This name was selected because it
-                represents the city where the chamber operates and helps visitors immediately associate the site with
+            <p>The site will be named "Manhattan Beach Chamber of Commerce." It was selected because it
+                represents the city where I am from and where the chamber operates and helps visitors immediately associate the site with
                 the local business community.</p>
         </section>
-        <!-- Site Purpose Section -->
         <section>
             <h2>Site Purpose</h2>
             <p>The purpose of the site is to:</p>
             <ul>
                 <li>Provide local businesses and entrepreneurs with a platform to promote their services and connect
                     with the community.</li>
-                <li>Act as a hub for event information, economic development news, and business resources to help local
-                    commerce thrive.</li>
+                <li>Act as a place for city information, economic development news, and business resources to help local
+                    commerce.</li>
             </ul>
         </section>
-        <!-- Scenarios Section -->
         <section>
             <h2>Scenarios</h2>
             <p>Common questions that visitors might have:</p>
             <ul>
-                <li>What networking events are available for local businesses this month?</li>
+                <li>What events are available for local businesses this month?</li>
                 <li>Where can I find the chamber’s leadership team and contact information?</li>
                 <li>How can I register my business with the chamber?</li>
             </ul>
         </section>
-        <!-- Color Schema Section -->
         <section>
             <h2>Color Schema</h2>
             <p>Color scheme chosen for the site:</p>
@@ -59,7 +53,6 @@
                 <li>Accent Color: #ffcc00 (Gold) – for buttons, links, and call-to-action elements.</li>
             </ul>
         </section>
-        <!-- Typography Section -->
         <section>
             <h2>Typography</h2>
             <p>Fonts selected for the site:</p>
@@ -68,7 +61,6 @@
                 <li>Body Text: 'Roboto'</li>
             </ul>
         </section>
-        <!-- Wireframe Section -->
         <section>
             <h2>Wireframe</h2>
             <p>Below are sketches of the homepage layout for both mobile and desktop views:</p>
@@ -76,7 +68,6 @@
             <img src="images/desktop-wireframe.png" alt="Screenshot of the desktop wireframe">
         </section>
     </main>
-
     <footer>
         <p>&copy; 2024 Manhattan Beach Chamber of Commerce</p>
     </footer>
