--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <button id="menu" class></button>
     <nav class="navigation">
         <a href="#">Home</a>
-        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
+        <a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a>
         <a href="chamber/">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/moro/7?lang=eng&id=p11-p13#p11"
