--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -12,9 +12,11 @@
     <meta property="og:image"
         content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
     <meta property="og:url" content="https://conorkek.github.io/wdd230/">
+    <link rel="icon" href="images/favicon.ico">
     <title>Manhattan Beach Chamber of Commerce Site Plan</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
+
 <body>
     <header>
         <h1>Manhattan Beach Chamber of Commerce Site Plan</h1>
@@ -23,7 +25,8 @@
         <section>
             <h2>Site Name</h2>
             <p>The site will be named "Manhattan Beach Chamber of Commerce." It was selected because it
-                represents the city where I am from and where the chamber operates and helps visitors immediately associate the site with
+                represents the city where I am from and where the chamber operates and helps visitors immediately
+                associate the site with
                 the local business community.</p>
         </section>
         <section>
