edited html link

--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -12,7 +12,7 @@
     <meta property="og:image"
         content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
     <meta property="og:url" content="https://conorkek.github.io/wdd230/">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="../images/favicon.ico">
     <title>Manhattan Beach Chamber of Commerce Site Plan</title>
     <link rel="stylesheet" href="styles/base.css">
 </head>
