add and edited html add css

--- a/index.html
+++ b/index.html
@@ -53,15 +53,17 @@
                     02: <a href="lesson02/design-principles.html">Lesson 02 | Design Principles</a>
                 </li>
                 <li>
-                    03: <a href="lesson03/images/w3schools-exercise.png">Screenshot of w3schools.com combinator
-                        exercise</a>
-                </li>
-                <li>
-                    04: <a href="https://codepen.io/conorkek/pen/mdNeYgW">Link to CodePen CSS Psuedo Elements
+                    03: <a href="lesson03/images/w3schools-exercise.png">Combinator
+                        exercise</a> | <a href="https://codepen.io/conorkek/pen/mdNeYgW">CodePen CSS Psuedo
+                        Elements
+                        Activity</a> | <a href="https://codepen.io/conorkek/pen/YzmwaMY">CodePen Hamburger
                         Activity</a>
                 </li>
                 <li>
-                    05: <a href="https://codepen.io/conorkek/pen/YzmwaMY">Link to CodePen Hamburger Activity</a>
+                    04: <a href="https://codepen.io/conorkek/pen/LYwRqGz">CodePen CSS Pseudo-Classes</a>
+                </li>
+                <li>
+                    05: <a href=""></a>
                 </li>
                 <li>
                     06: <a href=""></a>
