--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navigation">
         <a href="#">Home</a>
         <a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a>
-        <a href="chamber/">Chamber</a>
+        <a href="chamber/index.html">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/moro/7?lang=eng&id=p11-p13#p11"
             target="_blank">Scripture</a>
