--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,66 +14,55 @@
     <meta property="og:url" content="https://conorkek.github.io/wdd230/">
     <link rel="icon" href="../images/favicon.ico">
     <title>Manhattan Beach Chamber of Commerce Site Plan</title>
+    <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
     <header>
         <h1>Manhattan Beach Chamber of Commerce Site Plan</h1>
+        <button id="menu" class></button>
+        <nav class="navigation">
+            <a href="#">Home</a>
+            <a href="#">Discover</a>
+            <a href="#">Directory</a>
+            <a href="#">Join</a>
+        </nav>
     </header>
     <main>
-        <section>
-            <h2>Site Name</h2>
-            <p>The site will be named "Manhattan Beach Chamber of Commerce." It was selected because it
-                represents the city where I am from and where the chamber operates and helps visitors immediately
-                associate the site with
-                the local business community.</p>
+        <img src="images/manhattan-beach-image.jpeg" alt="Picture of the Manhattan Beach Pier at sunset">
+        <div class="button">
+            <a href="#">Join the Chamber</a>
+        </div>
+        <section class="card">
+            <h2>Current Events</h2>
+            <p>Nothing</p>
         </section>
-        <section>
-            <h2>Site Purpose</h2>
-            <p>The purpose of the site is to:</p>
-            <ul>
-                <li>Provide local businesses and entrepreneurs with a platform to promote their services and connect
-                    with the community.</li>
-                <li>Act as a place for city information, economic development news, and business resources to help local
-                    commerce.</li>
-            </ul>
+        <section class="card">
+            <h2>Weather</h2>
+            <p>It's foggy</p>
         </section>
-        <section>
-            <h2>Scenarios</h2>
-            <p>Common questions that visitors might have:</p>
-            <ul>
-                <li>What events are available for local businesses this month?</li>
-                <li>Where can I find the chamber’s leadership team and contact information?</li>
-                <li>How can I register my business with the chamber?</li>
-            </ul>
+        <section class="card">
+            <h2>Spotlight</h2>
+            <p>Conor Kekauoha's Music Lessons: check them out!</p>
         </section>
-        <section>
-            <h2>Color Schema</h2>
-            <p>Color scheme chosen for the site:</p>
-            <ul>
-                <li>Primary Color: #003366 (Navy) – for headings and footer background.</li>
-                <li>Accent Color: #ffcc00 (Gold) – for buttons, links, and call-to-action elements.</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Typography</h2>
-            <p>Fonts selected for the site:</p>
-            <ul>
-                <li>Headings: 'Roboto'</li>
-                <li>Body Text: 'Roboto'</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Wireframe</h2>
-            <p>Below are sketches of the homepage layout for both mobile and desktop views:</p>
-            <img src="images/mobile-wireframe.png" alt="Screenshot of the mobile wireframe">
-            <img src="images/desktop-wireframe.png" alt="Screenshot of the desktop wireframe">
+        <section class="card">
+            <h2>Spotlight</h2>
+            <p>Conor Kekauoha's Music Socials: Instagram: @Conorkekauohamusic</p>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Manhattan Beach Chamber of Commerce</p>
+
+        <p>
+            Conor Kekauoha | Project for WDD230
+        </p>
+        <p id="lastModified"></p>
     </footer>
+    <script src="scripts/getdates.js"></script>
+    <script src="scripts/hamburger-menu.js"></script>
 </body>
 
 </html>
