--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="navigation">
         <a href="#">Home</a>
         <a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a>
-        <a href="chamber/index.html">Chamber</a>
+        <a href="chamber/index.html" target="_blank">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
         <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/moro/7?lang=eng&id=p11-p13#p11"
             target="_blank">Scripture</a>
@@ -90,7 +90,7 @@
         </section>
         <iframe class="map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26496.05005913012!2d-118.42174214482833!3d33.889492685963795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b3c5e2b0632f%3A0x70351d4f4154520!2sManhattan%20Beach%2C%20CA%2090266!5e0!3m2!1sen!2sus!4v1727924375615!5m2!1sen!2sus"
-            allowfullscreen="" frameBorder="0" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
     <footer>
         <p>
