--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
             <p>Number of visits to page:</p>
         </section>
         <iframe class="map"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26496.05005913012!2d-118.42174214482833!3d33.889492685963795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b3c5e2b0632f%3A0x70351d4f4154520!2sManhattan%20Beach%2C%20CA%2090266!5e0!3m2!1sen!2sus!4v1727924375615!5m2!1sen!2sus"
-            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26496.05005913012!2d-118.42174214482833!3d33.889492685963795!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2b3c5e2b0632f%3A0x70351d4f4154520!2sManhattan%20Beach%2C%20CA%2090266!5e0!3m2!1sen!2sus!4v1727924375615!5m2!1sen!2sus"></iframe>
     </main>
     <footer>
         <p>
