--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,7 +13,7 @@
         content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
     <meta property="og:url" content="https://conorkek.github.io/wdd230/">
     <link rel="icon" href="../images/favicon.ico">
-    <title>Manhattan Beach Chamber of Commerce Site Plan</title>
+    <title>Manhattan Beach Chamber of Commerce</title>
     <link rel="stylesheet" href="/styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
