--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://conorkek.github.io/wdd230/">
     <link rel="icon" href="../images/favicon.ico">
     <title>Manhattan Beach Chamber of Commerce</title>
-    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
