--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,7 +54,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Manhattan Beach Chamber of Commerce</p>
+        <p>&copy; <span id="year">year</span> Manhattan Beach Chamber of Commerce</p>
 
         <p>
             Conor Kekauoha | Project for WDD230
