--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <h1>Manhattan Beach Chamber of Commerce Site Plan</h1>
+        <h1>Manhattan Beach Chamber of Commerce</h1>
         <button id="menu" class></button>
         <nav class="navigation">
             <a href="#">Home</a>
