--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,7 +46,9 @@
         </section>
         <section class="card">
             <h2>Spotlight</h2>
-            <p>Conor Kekauoha's Music Lessons: check them out!</p>
+            <p><a href="https://conorkek.github.io/wdd130/kekauoha-music/index.html" target="_blank">Conor Kekauoha's
+                    Music Lessons</a>
+            </p>
         </section>
         <section class="card">
             <h2>Spotlight</h2>
