add css and html

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,7 +52,17 @@
         </section>
         <section class="card">
             <h2>Spotlight</h2>
-            <p>Conor Kekauoha's Music Socials: Instagram: @Conorkekauohamusic</p>
+            <p>Conor Kekauoha's Music Socials
+            <ul>
+                <li>
+                    Instagram: <a href="https://www.instagram.com/conorkekauohamusic/"
+                        target="_blank">@conorkekauohamusic</a>
+                </li>
+                <li>
+                    Tiktok: <a href="https://www.tiktok.com/@conorkek" target="_blank">@conorkek</a>
+                </li>
+            </ul>
+            </p>
         </section>
     </main>
     <footer>
