--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,7 +38,7 @@
         </div>
         <section class="card">
             <h2>Current Events</h2>
-            <p>Nothing</p>
+            <p>🎃 Halloween is coming on the 31st of October! 🎃</p>
         </section>
         <section class="card">
             <h2>Weather</h2>
