edited files and html

--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -7,13 +7,13 @@
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's Design Principles website">
     <meta name="description"
-        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
+        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is to go over deisgn principles">
     <link rel="icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/media-query-medium.css">
     <link rel="stylesheet" href="styles/media-query-larger.css">
-    <title>Document</title>
+    <title>Design Principles</title>
 </head>
 
 <body>
