--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -11,8 +11,8 @@
     <link rel="icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/media-query-medium.css">
-    <link rel="stylesheet" href="styles/media-query-larger.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <title>Design Principles</title>
 </head>
 
