--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     04: <a href="https://codepen.io/conorkek/pen/LYwRqGz">CodePen CSS Pseudo-Classes</a>
                 </li>
                 <li>
-                    05: <a href=""></a>
+                    05: <a href="lesson05/bom.html">BoM Favorite Chapters</a>
                 </li>
                 <li>
                     06: <a href=""></a>
