--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
                     01: <a href="">Activity 1</a>
                 </li>
                 <li>
-                    02: <a href="lesson02/design-principles.html">Lesson 02 | Design Principles</a>
+                    02: <a href="lesson02/design-principles.html" target="_blank">Lesson 02 | Design Principles</a>
                 </li>
                 <li>
-                    03: <a href="lesson03/images/w3schools-exercise.png">Combinator
-                        exercise</a> | <a href="https://codepen.io/conorkek/pen/mdNeYgW">CodePen CSS Psuedo
+                    03: <a href="lesson03/images/w3schools-exercise.png" target="_blank">Combinator
+                        exercise</a> | <a href="https://codepen.io/conorkek/pen/mdNeYgW" target="_blank">CodePen CSS Psuedo
                         Elements
-                        Activity</a> | <a href="https://codepen.io/conorkek/pen/YzmwaMY">CodePen Hamburger
+                        Activity</a> | <a href="https://codepen.io/conorkek/pen/YzmwaMY" target="_blank">CodePen Hamburger
                         Activity</a>
                 </li>
                 <li>
-                    04: <a href="https://codepen.io/conorkek/pen/LYwRqGz">CodePen CSS Pseudo-Classes</a>
+                    04: <a href="https://codepen.io/conorkek/pen/LYwRqGz" target="_blank">CodePen CSS Pseudo-Classes</a>
                 </li>
                 <li>
-                    05: <a href="lesson05/bom.html">BoM Favorite Chapters</a>
+                    05: <a href="lesson05/bom.html" target="_blank">BoM Favorite Chapters</a>
                 </li>
                 <li>
                     06: <a href=""></a>
