add html, css, and js

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,6 +28,10 @@
 <body>
     <header>
         <h1>Manhattan Beach Chamber of Commerce</h1>
+        <label class="switch">
+            <input type="checkbox" id="dark-mode-toggle">
+            <span class="slider round"></span>
+        </label>
         <button id="menu" class></button>
         <nav class="navigation">
             <a href="#">Home</a>
@@ -80,6 +84,7 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
+    <script src="scripts/darkmode.js"></script>
 </body>
 
 </html>
