--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,24 +61,23 @@
         </section>
         <section class="card">
             <h2>Spotlight</h2>
-            <p>Conor Kekauoha's Music Socials
-                <ul>
-                    <li>
-                        Instagram: <a href="https://www.instagram.com/conorkekauohamusic/"
-                            target="_blank">@conorkekauohamusic</a>
-                    </li>
-                    <li>
-                        Tiktok: <a href="https://www.tiktok.com/@conorkek" target="_blank">@conorkek</a>
-                    </li>
-                </ul>
-            </p>
+            <p>Conor Kekauoha's Music Socials</p>
+            <ul>
+                <li>
+                    Instagram: <a href="https://www.instagram.com/conorkekauohamusic/"
+                        target="_blank">@conorkekauohamusic</a>
+                </li>
+                <li>
+                    Tiktok: <a href="https://www.tiktok.com/@conorkek" target="_blank">@conorkek</a>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
         <p>&copy; <span id="year">year</span> Manhattan Beach Chamber of Commerce</p>
 
         <p>
-            Conor Kekauoha | Project for WDD230
+            Conor Kekauoha | Project for WDD230 | (123) 456-7890 | conork@randomemail.com
         </p>
         <p id="lastModified"></p>
     </footer>
