add image and html

--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
                 </li>
                 <li>
                     03: <a href="lesson03/images/w3schools-exercise.png" target="_blank">Combinator
-                        exercise</a> | <a href="https://codepen.io/conorkek/pen/mdNeYgW" target="_blank">CodePen CSS Psuedo
+                        exercise</a> | <a href="https://codepen.io/conorkek/pen/mdNeYgW" target="_blank">CodePen CSS
+                        Psuedo
                         Elements
-                        Activity</a> | <a href="https://codepen.io/conorkek/pen/YzmwaMY" target="_blank">CodePen Hamburger
+                        Activity</a> | <a href="https://codepen.io/conorkek/pen/YzmwaMY" target="_blank">CodePen
+                        Hamburger
                         Activity</a>
                 </li>
                 <li>
@@ -66,7 +68,7 @@
                     05: <a href="lesson05/bom.html" target="_blank">BoM Favorite Chapters</a>
                 </li>
                 <li>
-                    06: <a href=""></a>
+                    06: <a href="images/landscape.webp">WebP</a>
                 </li>
                 <li>
                     07: <a href=""></a>
