--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     05: <a href="lesson05/bom.html" target="_blank">BoM Favorite Chapters</a>
                 </li>
                 <li>
-                    06: <a href="images/landscape.webp">WebP</a>
+                    06: <a href="lesson06/images/landscape.webp">WebP</a> | <a href="lesson06/responsize-images.html">Responsive Images</a>
                 </li>
                 <li>
                     07: <a href=""></a>
