edited html and js

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <header>
-        <img src="images/profile_pic.webp" alt="profile picture of Conor">
+        <img src="images/profile_pic.webp" alt="profile picture of Conor" media="(max-width: 50px)">
         <h1>Conor Kekauoha</h1>
     </header>
     <button id="menu" class></button>
@@ -44,7 +44,8 @@
             <source srcset="images/los-angeles-temple-small.webp" media="(max-width: 600px)">
             <!-- Larger view image -->
             <source srcset="images/los-angeles-temple-larger.webp" media="(min-width: 601px)">
-            <img src="images/los-angeles-temple.webp" alt="Los Angeles Temple" class="hero-image">
+            <img src="images/los-angeles-temple.webp" alt="Los Angeles Temple" class="hero-image"
+                media="(min-width: 901px)">
         </picture>
         <div class="overlay">Los Angeles Temple</div>
     </div>
