--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image"
         content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
     <meta property="og:url" content="https://conorkek.github.io/wdd230/">
-    <link rel="icon" href="../images/favicon.ico">
+    <link rel="icon" href="../images/favicon.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -41,7 +41,11 @@
         </nav>
     </header>
     <main>
-        <img src="images/manhattan-beach-image.jpeg" alt="Picture of the Manhattan Beach Pier at sunset">
+        <!-- <img src="images/manhattan-beach-image.jpeg" alt="Picture of the Manhattan Beach Pier at sunset"> -->
+        <img src="images/wdd230-org-large.webp"
+            srcset="images/wdd230-org-small.webp 600w, images/wdd230-org-medium.webp 1024w, images/wdd230-org-large.webp 1400w"
+            sizes="(max-width: 600px) 100vw, (max-width: 1024px) 50vw, 100vw"
+            alt="Picture of coworkers sitting at a table">
         <div class="button">
             <a href="#">Join the Chamber</a>
         </div>
@@ -51,7 +55,9 @@
         </section>
         <section class="card">
             <h2>Weather</h2>
-            <p>It's foggy</p>
+            <p>Temperature: <span id="temp">35</span>°F</p>
+            <p>Wind Speed: <span id="windSpeed">15</span> mph</p>
+            <p id="windChill">Wind Chill: Calculating...</p>
         </section>
         <section class="card">
             <h2>Spotlight</h2>
@@ -84,6 +90,7 @@
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/darkmode.js"></script>
+    <script src="scripts/windchill.js"></script>
 </body>
 
 </html>
