--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         href="lesson06/responsize-images.html">Responsive Images</a>
                 </li>
                 <li>
-                    07: <a href=""></a>
+                    07: <a href="lesson07/lazyload.html">Lazy loading</a>
                 </li>
                 <li>
                     08: <a href=""></a>
