--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                         href="lesson06/responsize-images.html">Responsive Images</a>
                 </li>
                 <li>
-                    07: <a href="lesson07/lazyload.html">Lazy loading</a>
+                    07: <a href="lesson07/lazyload.html">Lazy loading</a> | <a href="lesson07/bom.html">Enhanced BOM
+                        activity</a>
                 </li>
                 <li>
                     08: <a href=""></a>
