--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <div class="hero-container">
         <picture>
             <!-- Mobile image -->
-            <source srcset="images/los-angeles-temple-small.webp" media="(max-width: 600px)">
+            <source srcset="images/los-angeles-temple-small.webp">
             <!-- Larger view image -->
-            <source srcset="images/los-angeles-temple-larger.webp" media="(min-width: 601px)">
+            <source srcset="images/los-angeles-temple-larger.webp">
             <img src="images/los-angeles-temple.webp" alt="Los Angeles Temple" width="600" height="400"
-                class="hero-image" media="(min-width: 901px)">
+                class="hero-image">
         </picture>
         <div class="overlay">Los Angeles Temple</div>
     </div>
