--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <header>
-        <img src="images/profile_pic.webp" alt="profile picture of Conor" media="(max-width: 50px)">
+        <img src="images/profile_pic.webp" alt="profile picture of Conor">
         <h1>Conor Kekauoha</h1>
     </header>
     <button id="menu" class></button>
