--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="hero-container">
         <picture>
             <!-- Mobile image -->
-            <source srcset="images/los-angeles-temple-small.webp">
+            <source srcset="images/los-angeles-temple-small.webp" type="image/webp">
             <!-- Larger view image -->
             <source srcset="images/los-angeles-temple-larger.webp">
             <img src="images/los-angeles-temple.webp" alt="Los Angeles Temple" width="600" height="400"
