--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -48,12 +48,12 @@
                 </section>
             </aside>
             <div id="gallery">
-                <img data-src="image1.webp" alt="Image 1" loading="lazy">
-                <img data-src="image2.webp" alt="Image 2" loading="lazy">
-                <img data-src="image3.webp" alt="Image 3" loading="lazy">
-                <img data-src="image4.webp" alt="Image 4" loading="lazy">
-                <img data-src="image5.webp" alt="Image 5" loading="lazy">
-                <img data-src="image6.webp" alt="Image 6" loading="lazy">
+                <img src="image2.webp" alt="Image 2" loading="lazy">
+                <img src="image1.webp" alt="Image 1" loading="lazy">
+                <img src="image3.webp" alt="Image 3" loading="lazy">
+                <img src="image4.webp" alt="Image 4" loading="lazy">
+                <img src="image5.webp" alt="Image 5" loading="lazy">
+                <img src="image6.webp" alt="Image 6" loading="lazy">
             </div>
         </main>
         
