added images, css, js, and html

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description"
@@ -23,6 +24,7 @@
     <link rel="stylesheet" href="styles/larger.css">
     <title>Manhattan Beach Chamber of Commerce</title>
 </head>
+
 <body>
     <header>
         <h1>Manhattan Beach Chamber of Commerce</h1>
@@ -32,31 +34,30 @@
         </label>
         <button id="menu" class></button>
         <nav class="navigation">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="#">Discover</a>
             <a href="#">Directory</a>
             <a href="#">Join</a>
         </nav>
     </header>
     <main>
-        <main>
-            <aside id="sidebar">
-                <section id="visitMessage"></section>
-                <section>
-                    <h2>Demographics</h2>
-                    <p>Information about the local community</p>
-                </section>
-            </aside>
+        <aside id="sidebar">
+            <section id="visitMessage"></section>
+            <section>
+                <h2>Demographics</h2>
+                <p>Information about the local community</p>
+            </section>
+        </aside>
+        <div id="gallery">
             <div id="gallery">
-                <img src="image2.webp" alt="Image 2" loading="lazy">
-                <img src="image1.webp" alt="Image 1" loading="lazy">
-                <img src="image3.webp" alt="Image 3" loading="lazy">
-                <img src="image4.webp" alt="Image 4" loading="lazy">
-                <img src="image5.webp" alt="Image 5" loading="lazy">
-                <img src="image6.webp" alt="Image 6" loading="lazy">
+                <img src="images/MB-img1.jpeg" alt="Sunset over Manhattan Beach Pier" loading="lazy">
+                <img src="images/MB-img2.jpg" alt="Manhattan Beach lifeguard station" loading="lazy">
+                <img src="images/MB-img3.webp" alt="Manhattan Beach Pier from above" loading="lazy">
+                <img src="images/MB-img4.webp" alt="Palm trees at Manhattan Beach" loading="lazy">
+                <img src="images/MB-img5.webp" alt="Waves crashing on Manhattan Beach shore" loading="lazy">
+                <img src="images/MB-img6.webp" alt="People enjoying sunset at Manhattan Beach Pier" loading="lazy">
             </div>
-        </main>
-        
+        </div>
     </main>
     <footer>
         <p>&copy; <span id="year">year</span> Manhattan Beach Chamber of Commerce</p>
@@ -70,5 +71,7 @@
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/windchill.js"></script>
+    <script src="scripts/discover.js"></script>
 </body>
+
 </html>
