--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description"
@@ -23,6 +24,7 @@
     <link rel="stylesheet" href="styles/larger.css">
     <title>Manhattan Beach Chamber of Commerce</title>
 </head>
+
 <body>
     <header>
         <h1>Manhattan Beach Chamber of Commerce</h1>
@@ -33,7 +35,7 @@
         <button id="menu" class></button>
         <nav class="navigation">
             <a href="#">Home</a>
-            <a href="#">Discover</a>
+            <a href="discover.html">Discover</a>
             <a href="#">Directory</a>
             <a href="#">Join</a>
         </nav>
@@ -90,4 +92,5 @@
     <script src="scripts/darkmode.js"></script>
     <script src="scripts/windchill.js"></script>
 </body>
+
 </html>
