--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,21 +42,19 @@
     </header>
     <main>
         <aside id="sidebar">
-            <section id="visitMessage"></section>
+            <section id="visitMessage">Discover</section>
             <section>
                 <h2>Demographics</h2>
                 <p>Information about the local community</p>
             </section>
         </aside>
         <div id="gallery">
-            <div id="gallery">
-                <img src="images/MB-img1.jpeg" alt="Sunset over Manhattan Beach Pier" loading="lazy">
-                <img src="images/MB-img2.jpg" alt="Manhattan Beach lifeguard station" loading="lazy">
-                <img src="images/MB-img3.webp" alt="Manhattan Beach Pier from above" loading="lazy">
-                <img src="images/MB-img4.webp" alt="Palm trees at Manhattan Beach" loading="lazy">
-                <img src="images/MB-img5.webp" alt="Waves crashing on Manhattan Beach shore" loading="lazy">
-                <img src="images/MB-img6.webp" alt="People enjoying sunset at Manhattan Beach Pier" loading="lazy">
-            </div>
+            <img src="images/MB-img1.jpeg" alt="Sunset over Manhattan Beach Pier" loading="lazy">
+            <img src="images/MB-img2.jpg" alt="Manhattan Beach lifeguard station" loading="lazy">
+            <img src="images/MB-img3.webp" alt="Manhattan Beach Pier from above" loading="lazy">
+            <img src="images/MB-img4.webp" alt="Palm trees at Manhattan Beach" loading="lazy">
+            <img src="images/MB-img5.webp" alt="Waves crashing on Manhattan Beach shore" loading="lazy">
+            <img src="images/MB-img6.webp" alt="People enjoying sunset at Manhattan Beach Pier" loading="lazy">
         </div>
     </main>
     <footer>
