--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -7,7 +7,7 @@
         content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for the Chamber of Commerce">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
-    <meta property="og:title" content="Conor Kekauoha's Chamber of Commerce website for WDD-230">
+    <meta property="og:title" content="Conor Kekauoha's Chamber Discover Page for WDD-230">
     <meta property="og:type" content="website">
     <meta property="og:image"
         content="https://res.cloudinary.com/luxuryp/images/f_auto,q_auto/wps6ppy4blbtookai1xj/happy-thanksgiving-john-bathurst-1">
