--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,8 +42,7 @@
     </header>
     <main>
         <aside id="sidebar">
-            <section id="visitMessage">Discover</section>
-            <section>
+            <section id="visitMessage">
                 <h2>Demographics</h2>
                 <p>Information about the local community</p>
             </section>
