--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <title>Manhattan Beach Chamber of Commerce</title>
+    <title>Manhattan Beach Chamber of Commerce and Discover Page</title>
 </head>
 
 <body>
