--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,7 +42,11 @@
     </header>
     <main>
         <aside id="sidebar">
-            <section id="visitMessage">
+            <section>
+                <h1>Discover Manhattan Beach</h1>
+            </section>
+            <section id="visitMessage"></section>
+            <section>
                 <h2>Demographics</h2>
                 <p>Information about the local community</p>
             </section>
