edit html and css

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -50,14 +50,32 @@
                 <h2>Demographics</h2>
                 <p>Information about the local community</p>
             </section>
+            <section>
+                <h2>Statistical Data</h2>
+                <p>Numbers</p>
+            </section>
+            <section>
+                <h2>Events</h2>
+                <p>Thanksgiving is on the 28th of November!</p>
+            </section>
+            <section>
+                <h2>Attractions</h2>
+                <p>Beach Activities</p>
+            </section>
+            <section>
+                <h2>Calendar</h2>
+                <iframe
+                    src="https://calendar.google.com/calendar/embed?src=549a302d26bf07a36e92a9c691a9d3996b12a3021fa0ee2f76dd686c7ab82091%40group.calendar.google.com&ctz=America%2FLos_Angeles"
+                    style="border: 0" width="600" height="400" frameborder="0" scrolling="no"></iframe>
+            </section>
         </aside>
         <div id="gallery">
             <img src="images/MB-img1.jpeg" alt="Sunset over Manhattan Beach Pier" loading="lazy">
-            <img src="images/MB-img2.jpg" alt="Manhattan Beach lifeguard station" loading="lazy">
-            <img src="images/MB-img3.webp" alt="Manhattan Beach Pier from above" loading="lazy">
-            <img src="images/MB-img4.webp" alt="Palm trees at Manhattan Beach" loading="lazy">
-            <img src="images/MB-img5.webp" alt="Waves crashing on Manhattan Beach shore" loading="lazy">
-            <img src="images/MB-img6.webp" alt="People enjoying sunset at Manhattan Beach Pier" loading="lazy">
+            <img src="images/MB-img2.jpg" alt="Manhattan Beach Pier bird's eye view" loading="lazy">
+            <img src="images/MB-img3.webp" alt="Manhattan Beach Pier" loading="lazy">
+            <img src="images/MB-img4.webp" alt="Sunset at Manhattan Beach Pier" loading="lazy">
+            <img src="images/MB-img5.webp" alt="Picture down Manhattan Beach blvd from Highland" loading="lazy">
+            <img src="images/MB-img6.webp" alt="Manhattan Village at night from above" loading="lazy">
         </div>
     </main>
     <footer>
@@ -68,10 +86,8 @@
         </p>
         <p id="lastModified"></p>
     </footer>
-    <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/darkmode.js"></script>
-    <script src="scripts/windchill.js"></script>
     <script src="scripts/discover.js"></script>
 </body>
 
