--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         activity</a>
                 </li>
                 <li>
-                    08: <a href=""></a>
+                    08: <a href="lesson08/tablebuild.html">Table Build Activity</a> 
                 </li>
                 <li>
                     09: <a href=""></a>
