add html and css

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                         activity</a>
                 </li>
                 <li>
-                    08: <a href="lesson08/tablebuild.html">Table Build Activity</a> 
+                    08: <a href="lesson08/tablebuild.html">Table Build Activity</a> | <a href="form.html">Form
+                        Activity</a> | <a href="form.html">Form Build</a>
                 </li>
                 <li>
                     09: <a href=""></a>
