--- a/record.html
+++ b/record.html
@@ -32,7 +32,7 @@
     </header>
     <button id="menu" class></button>
     <nav class="navigation">
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="lesson03/chamber-site-plan.html" target="_blank">Site Plan</a>
         <a href="chamber/index.html" target="_blank">Chamber</a>
         <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
