--- a/form.html
+++ b/form.html
@@ -56,7 +56,8 @@
 
             <!-- Email Field -->
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="someone@byui.edu" required>
+            <input type="email" id="email" name="email" placeholder="someone@byui.edu"
+                title="A valid byui.edu email address." required>
 
             <!-- Page Rating Field -->
             <label for="rating">Page Rating</label>
