--- a/form.html
+++ b/form.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description"
-        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
+    <meta name="description" content="Conor Kekauoha - WDD 230 - Web Frontend Development - Form Build">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's website for WDD-230">
@@ -22,7 +21,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <title>Conor Kekauoha - WDD 230 - Web Frontend Development</title>
+    <title>Conor Kekauoha - WDD 230 - Web Frontend Development - Form Build</title>
 </head>
 
 <body>
