--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -35,9 +35,9 @@
         <button id="menu" class></button>
         <nav class="navigation">
             <a href="index.html">Home</a>
-            <a href="#">Discover</a>
+            <a href="discover.html">Discover</a>
             <a href="#">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
         </nav>
     </header>
     <main>
