--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,10 +34,10 @@
         </label>
         <button id="menu" class></button>
         <nav class="navigation">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
             <a href="#">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
         </nav>
     </header>
     <main>
