--- a/chamber/join.html
+++ b/chamber/join.html
@@ -69,10 +69,9 @@
                 <label for="organization">Organization Name:
                     <input type="text" id="organization" name="organization" required>
                 </label>
-
                 <label for="membership-level">Membership Level:
                     <select id="membership-level" name="membership-level" required>
-                        <option value="NP">NP Membership (Non-Profit, Free)</option>
+                        <option value="non-profit">NP Membership (Non-Profit, Free)</option>
                         <option value="Bronze">Bronze Membership</option>
                         <option value="Silver">Silver Membership</option>
                         <option value="Gold">Gold Membership</option>
